# rust

./: Cargo.toml
src/: main.rs
templates/: check.html.tera  dashboard.html.tera  delete.html.tera  form.html.tera  insert.html.tera  let.html  login.html.tera  register.html.tera  update.html.tera  uploadform.html.tera
