[package]
name = "backend-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket= { version = "0.5.0-rc.3" }
rocket_contrib={ version = "0.4.0-rc.2" }
futures = {version ="0.3.28"}
mongodb="2.7.0"
tokio = { version = "1", features = ["full"] }
serde ="1.0"
serde_json="1.0"
bcrypt="0.15.0"





[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = [ "tera"]